=========
Changelog
=========

This file keeps track of all notable changes to the Slurm Charms.

Unreleased
----------

- Change license to Apache-2.0
- removed the action in slurmd to install Nvidia drivers
- removed the action in slurmd to install Singularity
- removed the action in slurmd to install MPI (mpich)

1.0.0 - 2022-10-17
------------------

0.10.1 - 2022-10-04
-------------------

- added action in slurmd to install MPI (mpich)

0.10.0 - 2022-09-15
-------------------

- updated NHC to version 1.4.3
- changed how NHC is installed to be via Juju resources
- added action in slurmd to install singularity

0.9.2 - 2022-07-04
------------------

- added slurmctld configuration options to use TLS certificates for etcd

0.9.1 - 2022-06-02
------------------

- added munge key to etcd database
- added action in slurmctld to create etcd user to query mungekey
- added action in slurmctld to get etcd root password
- added action in slurmd to get etcd slurmd password
- added set-node-inventory slurmd action
- updated default Mellanox Infiniband drivers to version 5.4
- fix get-node-inventory action
- fix influxdb-info slurmctld action
- fix etcd not being configured after an upgrade

0.9.0 - 2022-04-12
------------------

- fix: do not install Nvidia repository by default
- add support for custom NHC parameters
- improve checks when nodes need to be rebooted
- add Nvidia GPU support: install drivers via an action on compute nodes
- update operator framework to 1.3.0

0.8.5 - 2022-01-13
------------------

- add support for ElasticSearch Slurm addon
- pin Operator Framework to 1.2.0

0.8.4 - 2021-12-10
------------------

- use the cluster name as the database name for InfluxDB
- improve logrotate profiles for Slurm and NHC logs
- add epilog-prolog relation

0.8.3 - 2021-11-05
------------------

- add labels to Fluentbit logs: cluster-name, partition-name, hostname, service
- add user-group relation to create user and group on the system