@@ -1,3 +1,3 @@
 ops==1.3.0
 etcd3gw==1.0.2
-git+https://github.com/omnivector-solutions/slurm-ops-manager.git@0.8.10
+git+https://github.com/omnivector-solutions/slurm-ops-manager.git@0.8.11
